--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "fs": "0.0.1-security",
         "https": "^1.0.0",
         "mssql": "^6.2.1",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4",
+        "generate-password": "^1.5.1",
+        "jsonwebtoken": "^8.5.1"
     }
 }
